--- a/public/customer-service.html
+++ b/public/customer-service.html
@@ -104,7 +104,7 @@
         <h2>Customer Service</h2>
         <p>We're here to help! Reach out to us with your questions, feedback, or support requests.</p>
         <div class="customer-service-details">
-            <p><i class="fas fa-phone"></i> +91 98765 43210</p>
+            <p><i class="fas fa-phone"></i> +91 8448665087</p>
             <p>
                 <i class="fas fa-envelope"></i>
                 <a href="mailto:support@dreamweavertravels.com" style="color:#2596be;text-decoration:underline;">
