Update booking link in hero section to point to booking.html

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <div class="hero-overlay">
             <h1>Welcome to DreamWeaver Travels</h1>
             <p>Explore the world with us!</p>
-            <a href="#main-content" class="book-now-btn" id="bookNowBtn">
+            <a href="booking.html" class="book-now-btn" id="bookNowBtn">
                 <span class="btn-text">Book Now</span>
                 <span class="plane" style="display:none;">
                     <i class="fas fa-plane"></i>
