--- a/public/tours.html
+++ b/public/tours.html
@@ -36,25 +36,25 @@
                     <img src="maldives.jpg" alt="Maldives">
                     <h3>Maldives Getaway</h3>
                     <p>5 Nights / 6 Days<br>Luxury resort stay, water sports, and island tours.</p>
-                    <span class="tour-price">From $999</span>
+                    <span class="tour-price">From ₹83,000</span>
                 </div>
                 <div class="tour-card">
                     <img src="Switzerland.jpg" alt="Switzerland">
                     <h3>Swiss Alps Adventure</h3>
                     <p>7 Nights / 8 Days<br>Scenic train rides, mountain excursions, and city tours.</p>
-                    <span class="tour-price">From $1499</span>
+                    <span class="tour-price">From ₹1,24,000</span>
                 </div>
                 <div class="tour-card">
                     <img src="bali.jpg" alt="Bali">
                     <h3>Bali Bliss</h3>
                     <p>6 Nights / 7 Days<br>Beach resorts, temple visits, and cultural experiences.</p>
-                    <span class="tour-price">From $799</span>
+                    <span class="tour-price">From ₹66,000</span>
                 </div>
                 <div class="tour-card">
                     <img src="egypt.jpg" alt="Egypt">
                     <h3>Egyptian Wonders</h3>
                     <p>8 Nights / 9 Days<br>Pyramids, Nile cruise, and ancient history tours.</p>
-                    <span class="tour-price">From $1199</span>
+                    <span class="tour-price">From ₹99,000</span>
                 </div>
             </div>
         </section>
