--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,8 @@
             gap: 18px;
         }
         .login-container input[type="text"],
-        .login-container input[type="password"] {
+        .login-container input[type="password"],
+        .login-container input[type="email"] {
             padding: 10px 12px;
             border: 1.5px solid #2596be;
             border-radius: 6px;
@@ -39,7 +40,8 @@
             transition: border-color 0.18s;
         }
         .login-container input[type="text"]:focus,
-        .login-container input[type="password"]:focus {
+        .login-container input[type="password"]:focus,
+        .login-container input[type="email"]:focus {
             border-color: #248ee6;
         }
         .login-container button {
@@ -77,6 +79,13 @@
             color: #248ee6;
             text-decoration: underline;
         }
+        #loginCaptchaBox {
+            margin: 10px 0;
+        }
+        #loginCaptchaError {
+            color: red;
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -85,15 +94,43 @@
             <i class="fas fa-sign-in-alt"></i>
         </div>
         <h2>Login to DreamWeaver Travels</h2>
-        <form action="#" method="post">
-            <input type="text" name="username" placeholder="Username or Email" required>
+        <!-- Example login form with captcha -->
+        <form id="loginForm" autocomplete="off">
+            <input type="email" name="email" placeholder="Email Address" required>
             <input type="password" name="password" placeholder="Password" required>
+            <div id="loginCaptchaBox">
+                <span id="loginCaptchaQuestion"></span>
+                <input type="text" id="loginCaptchaAnswer" placeholder="Answer" required style="width:80px;">
+            </div>
             <button type="submit">Login</button>
+            <div id="loginCaptchaError">Incorrect captcha. Please try again.</div>
         </form>
         <div class="login-links">
             <a href="forgot-password.html">Forgot Password?</a> | 
             <a href="create-account.html">Create Account</a>
         </div>
     </div>
+    <script>
+        // Simple math captcha for login
+        function generateLoginCaptcha() {
+            const a = Math.floor(Math.random() * 10) + 1;
+            const b = Math.floor(Math.random() * 10) + 1;
+            document.getElementById('loginCaptchaQuestion').textContent = `What is ${a} + ${b}?`;
+            document.getElementById('loginCaptchaBox').dataset.answer = a + b;
+        }
+        generateLoginCaptcha();
+
+        document.getElementById('loginForm').onsubmit = function(e) {
+            const userAnswer = document.getElementById('loginCaptchaAnswer').value;
+            const correct = document.getElementById('loginCaptchaBox').dataset.answer;
+            if (parseInt(userAnswer) !== parseInt(correct)) {
+                e.preventDefault();
+                document.getElementById('loginCaptchaError').style.display = 'block';
+                generateLoginCaptcha();
+            } else {
+                document.getElementById('loginCaptchaError').style.display = 'none';
+            }
+        };
+    </script>
 </body>
 </html>
