--- a/public/destinations.html
+++ b/public/destinations.html
@@ -21,7 +21,7 @@
                 </button>
               <div class="menu-grid-popup">
     <a href="index.html"><i class="fas fa-home"></i> Home</a>
-    <a href="destinations.html"><i class="fas fa-map-marked-alt"></i> Destinations</a>
+    <a href="about-us.html"><i class="fas fa-users"></i> About Us</a>
     <a href="tours.html"><i class="fas fa-plane"></i> Tours</a>
     <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
 </div>
