--- a/public/tours.html
+++ b/public/tours.html
@@ -23,7 +23,8 @@
                     <a href="index.html"><i class="fas fa-home"></i> Home</a>
                     <a href="destinations.html"><i class="fas fa-map-marked-alt"></i> Destinations</a>
                     <a href="tours.html"><i class="fas fa-plane"></i> Tours</a>
-                    <a href="#"><i class="fas fa-phone"></i> Contact</a>
+                    <a href="about-us.html"><i class="fas fa-users"></i> About Us</a>
+                    <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
                 </div>
             </nav>
         </div>
