Fix hero video autoplay and add fallback background

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <!-- changed: preload="none" and poster to avoid heavy decode on load -->
-        <video class="hero-video" src="bgvid.mp4" autoplay muted loop playsinline preload="none" poster="hero-poster.jpg"></video>
+        <video class="hero-video" src="bgvid.mp4" autoplay muted loop playsinline></video>
         <div class="hero-overlay">
             <h1>Welcome to DreamWeaver Travels</h1>
             <p>Explore the world with us!</p>
